Add ECO-mode for RAG